--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
     </div>
 </div>
 
-    <div  id="spinner" class="col-md-12" style="margin-left: 15px; padding-left: 0px;">
+    <div  id="spinner" class="col-md-12" style="margin-left: 15px; padding-left: 0px; display:none">
         <div class="spinner">
             <div class="dot1"></div>
             <div class="dot2"></div>
