--- a/Developer/Views/Admin/AdList.cshtml
+++ b/Developer/Views/Admin/AdList.cshtml
@@ -1,5 +1,24 @@
 ﻿@using System.Data.SqlTypes
 @model System.Collections.Generic.IEnumerable<Developer.Models.ViewModels.AdminAdvertToShow>
+<style type="text/css">
+    .hiddenAd {
+        background-color: rgb(65, 65, 65);
+        color: white;
+        display: none;
+    }
+    .hiddenAd:hover {
+        background-color: black;
+    }
+
+    .Ad {
+        background-color:rgb(137, 213, 164)
+    }
+
+    .Ad:hover {
+        background-color:rgb(73, 147, 99)
+    }
+</style>
+
 
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
@@ -9,10 +28,10 @@
             var hide = HttpContext.Current.Request.Params.Get("hide");
             if (hide == "True")
             {
-                <div class="alert alert-dismissable alert-default" style="margin: 10px; background-color: #798d8f; border-color: #74898a; color:white">
+                <div class="alert alert-dismissable alert-default" style="margin: 10px; background-color: #798d8f; border-color: #74898a; color: white">
                     <button type="button" class="close" data-dismiss="alert">×</button>
                     <div>
-                        <strong>Ogłoszenie zostało ukryte!</strong><br />
+                        <strong>Ogłoszenie zostało ukryte!</strong><br/>
                         Od tej pory nie będzie widoczne na liście nieruchomości.
                     </div>
                 </div>
@@ -22,7 +41,7 @@
                 <div class="alert alert-dismissable alert-info" style="margin: 10px">
                     <button type="button" class="close" data-dismiss="alert">×</button>
                     <div>
-                        <strong>Ogłoszenie zostało odkryte!</strong><br />
+                        <strong>Ogłoszenie zostało odkryte!</strong><br/>
                         Od tej pory będzie widoczne na liście nieruchomości.
                     </div>
                 </div>
@@ -30,9 +49,14 @@
 
         }
         <h4>Lista nieruchomości</h4>
+        <select id="filter" text="Pokaż" class="form-control">
+            <option text="aktywne" value="active">aktywne</option>
+            <option text="ukryte" value="hidden">ukryte</option>
+            <option text="usunięte" value="deleted">usunięte</option>
+        </select>
         <div class="row">
             <div class="col-md-12" style="font-size: small">
-                <table class="table table-striped">
+                <table class="table">
                     <thead>
                     <tr>
                         <th>
@@ -55,33 +79,75 @@
                     </tr>
                     </thead>
                     <tbody>
-                        @foreach (var ad in Model)
-                        {
-                            <tr style="@((!ad.Visible) ? "background-color: black; color:white" : "")">
-                                <td>@ad.CreatedAt.ToShortDateString()</td>
-                                <td>@ad.AdType</td>
-                                <td>@ad.Title</td>
-                                <td>@ad.City</td>
-                                <td>@ad.Worker.FullName</td>
-                                <td style="text-align: center">
-                                    @Html.ActionLink("Info", "Show", "Home", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-success btn-xs"})
-                                    @Html.ActionLink("Edytuj", "EditAd", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-danger btn-xs"})
-                                </td>
-                                <td style="text-align: center">
-                                    @if (ad.Visible)
-                                    {
-                                        @Html.ActionLink("Ukryj", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-default btn-xs"})
-                                    }
-                                    else
-                                    {
-                                        @Html.ActionLink("Pokaż", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-info btn-xs"})
-                                    }
-                                </td>
-                            </tr>
-                        }
+                    @foreach (var ad in Model.Where(x => x.Visible))
+                    {
+                        <tr class="Ad">
+                            <td>@ad.CreatedAt.ToShortDateString()</td>
+                            <td>@ad.AdType</td>
+                            <td>@ad.Title</td>
+                            <td>@ad.City</td>
+                            <td>@ad.Worker.FullName</td>
+                            <td style="text-align: center">
+                                @Html.ActionLink("Info", "Show", "Home", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-success btn-xs"})
+                                @Html.ActionLink("Edytuj", "EditAd", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-danger btn-xs"})
+                            </td>
+                            <td style="text-align: center">
+                                @if (ad.Visible)
+                                {
+                                    @Html.ActionLink("Ukryj", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-default btn-xs"})
+                                }
+                                else
+                                {
+                                    @Html.ActionLink("Pokaż", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-info btn-xs"})
+                                }
+                            </td>
+                        </tr>
+                    }
+                    @foreach (var ad in Model.Where(x => !x.Visible))
+                    {
+                        <tr class="hiddenAd">
+                            <td>@ad.CreatedAt.ToShortDateString()</td>
+                            <td>@ad.AdType</td>
+                            <td>@ad.Title</td>
+                            <td>@ad.City</td>
+                            <td>@ad.Worker.FullName</td>
+                            <td style="text-align: center">
+                                @Html.ActionLink("Info", "Show", "Home", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-success btn-xs"})
+                                @Html.ActionLink("Edytuj", "EditAd", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-danger btn-xs"})
+                            </td>
+                            <td style="text-align: center">
+                                @if (ad.Visible)
+                                {
+                                    @Html.ActionLink("Ukryj", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-default btn-xs"})
+                                }
+                                else
+                                {
+                                    @Html.ActionLink("Pokaż", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-info btn-xs"})
+                                }
+                            </td>
+                        </tr>
+                    }
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
+
+<script language="javascript" src="/Scripts/jquery-1.10.2.js"></script>
+
+<script language="javascript">
+    $("#filter").on("change", function() {
+        var val = $(this).val();
+
+        if (val === "hidden") {
+            $(".Ad").hide();
+            $(".hiddenAd").show();
+        } else if (val === "active") {
+            $(".hiddenAd").hide();
+            $(".Ad").show();
+        }
+
+    })
+</script>
+
