--- a/Developer/Views/Home/_ContactForm.cshtml
+++ b/Developer/Views/Home/_ContactForm.cshtml
@@ -1,6 +1,27 @@
 ﻿@model Developer.Models.ContactEmail
 
-@using (Html.BeginForm("SendEmail", "Home"))
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="row" style="padding: 10px">
+        <div class="alert alert-dismissable alert-danger">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <strong>Błąd</strong> @Html.ValidationSummary()
+            @{
+    var errors = ViewData.ModelState.Values.Count(x => x.Errors.Count > 0);
+    var all = ViewData.ModelState.Keys.Count;
+
+    var errors_p = (int)(((float)errors / (float)all) * 100);
+
+            }
+            <div class="progress progress-striped active" style="background-color:#e74c3c">
+                <div class="progress-bar progress-bar-success" style="width: @(100-errors_p)%"></div>
+                <div class="progress-bar progress-bar-danger" style="width: @(errors_p)%"></div>
+            </div>
+        </div>
+    </div>
+}
+
+@using (Html.BeginForm("SendEmail", "Home", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     <div class="form-group-sm">
