--- a/Developer/Views/Home/_ShowHouse.cshtml
+++ b/Developer/Views/Home/_ShowHouse.cshtml
@@ -10,7 +10,7 @@
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
         <h4>@Model.Title</h4>
-        <h5>Mieszkanie</h5>
+        <h5>Dom</h5>
         <div class="row">
             <div class="col-md-7">
                 <div class="row">
