--- a/Developer/Views/Shared/_Layout.cshtml
+++ b/Developer/Views/Shared/_Layout.cshtml
@@ -77,24 +77,27 @@
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
                         <ul class="nav nav-pills nav-stacked small">
-                            <li class="custom-list"><a href="#">Strona główna</a></li>
-                            <li class="custom-list"><a href="#">O firmie</a></li>
-                            <li class="custom-list"><a href="#">Kredyty</a></li>
-                            <li class="custom-list"><a href="#">Szybki kontakt</a></li>
+                            <li class="custom-list"><a href="/Home/Index">Strona główna</a></li>
+                            <li class="custom-list"><a href="/Home/About">O firmie</a></li>
+                            <li class="custom-list"><a href="/Home/Credits">Kredyty</a></li>
+                            <li class="custom-list"><a href="/Home/Contact">Szybki kontakt</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
-                        <small>Wprowadź numer oferty</small><br />
-                        <div class="row">
-                            <div class="col-md-6" style="padding-right: 0px">
-                                <input class=" form-control input-sm" />
+                        <small>Wprowadź numer oferty</small><br/>
+                        @using (Html.BeginForm("Search", "Home"))
+                        {
+                            <div class="row">
+                                <div class="col-md-6" style="padding-right: 0px">
+                                    <input class=" form-control input-sm" name="key"/>
+                                </div>
+                                <div class="col-md-6" style="padding-left: 10px">
+                                    <button type="submit" class="btn btn-sm btn-default">Wyszukaj</button>
+                                </div>
                             </div>
-                            <div class="col-md-6" style="padding-left: 10px">
-                                <button class="btn btn-sm btn-default">Wyszukaj</button>
-                            </div>
-                        </div>
+                        }
                     </div>
                 </div>
                 <div class="row">
@@ -104,7 +107,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 custom-left-panel">
-                        <button class="btn btn-sm btn-danger" style="width: 100%">Gdzie jesteśmy</button>
+                        <a role="button" class="btn btn-sm btn-danger" style="width: 100%" href="/Home/Where">Gdzie jesteśmy</a>
                     </div>
                 </div>
             </div>
