--- a/Developer/Views/Home/_ShowFlat.cshtml
+++ b/Developer/Views/Home/_ShowFlat.cshtml
@@ -5,9 +5,11 @@
 
 @{
     ViewBag.Title = "ShowFlat";
+    var x = String.Format("{0}", AdType.Flat);
 }
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+        <div class="pull-right" style="font-size: 12px; font-weight:100">Numer oferty: @Model.Number</div>
         <h4>@Model.Title</h4>
         <h5>Mieszkanie</h5>
         <div class="row">
@@ -21,9 +23,9 @@
                             }
                             else
                             {
-                                <img class="custom-head-photo" src="\Content\Photos\@Model.Pictures[0].Link" />
+                                <img class="custom-head-photo" src="\Content\Photos\@Model.Pictures[0].Link"/>
                             }
-}
+                        }
                     </div>
                 </div>
 
@@ -73,7 +75,7 @@
                                 foreach (var picture in Model.Pictures)
                                 {
                                     <div class="col-md-2" style="padding-bottom: 10px">
-                                        <img src="/Content/Photos/@picture.Link" style="width: 100%; cursor:pointer" class="small-pict"/>
+                                        <img src="/Content/Photos/@picture.Link" style="width: 100%; cursor: pointer" class="small-pict"/>
                                     </div>
                                 }
                             }
@@ -114,26 +116,26 @@
                         <div class="list-group-item-warning" style="padding-left: 15px">
                             Zapytaj
                         </div>
-                        <div class="col-md-12" style="border: 2px solid #f39c12; padding:10px">
+                        <div class="col-md-12" style="border: 2px solid #f39c12; padding: 10px">
                             <div class="col-md-6" style="font-size: small; padding-left: 0px">
                                 <b>Ofertę prowadzi:</b>
                                 <div class="row">
                                     <div class="col-md-4">
                                         @if (Model.Worker.HasPhoto)
                                         {
-                                            <img src="/Content/Photos/Workers/@Model.Worker.Photo" style="width: 100%" />
+                                            <img src="/Content/Photos/Workers/@Model.Worker.Photo" style="width: 100%"/>
                                         }
                                     </div>
                                     <div class="col-md-8">
-                                        @Model.Worker.FullName<br />
-                                        tel. 1: @Model.Worker.PhoneFirst<br />
-                                        tel. 2: @Model.Worker.PhoneSecond<br />
+                                        @Model.Worker.FullName<br/>
+                                        tel. 1: @Model.Worker.PhoneFirst<br/>
+                                        tel. 2: @Model.Worker.PhoneSecond<br/>
                                         email: @Model.Worker.Email
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6" style="border-left: 1px solid #f39c12" id="contactForm">
-                                @{ Html.RenderPartial("_ContactForm", new ContactEmail()); }
+                                @{ Html.RenderPartial("_ContactForm", Model.ContactEmail); }
                             </div>
                         </div>
                     </div>
