--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -144,7 +144,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-12 custom-advert-topic" style="padding-left: 0px; padding-right:0px">
-                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?key={{flat.Number}}">{{flat.Title}}</a></div>
+                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?key={{flat.Number}}">{{flat.Title}}</a> <small style="margin-left: 10px">nr. {{flat.Number}}</small></div>
                                 <div class="pull-right" style="font-weight: bolder; font-size: larger">{{flat.Price}}</div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-12 custom-advert-topic" style="padding-left: 0px; padding-right:0px">
-                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?key={{house.Number}}">{{house.Title}}</a></div>
+                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?key={{house.Number}}">{{house.Title}}</a> <small style="margin-left: 10px">nr. {{house.Number}}</small></div>
                                 <div class="pull-right" style="font-weight: bolder; font-size: larger">{{house.Price}}</div>
                             </div>
                         </div>
@@ -222,7 +222,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-12 custom-advert-topic" style="padding-left: 0px; padding-right:0px">
-                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?key={{land.Number}}">{{land.Title}}</a></div>
+                                <div class="pull-left" style="font-weight: bold"><a href="/Home/Show?key={{land.Number}}">{{land.Title}}</a> <small style="margin-left: 10px">nr. {{land.Number}}</small></div>
                                 <div class="pull-right" style="font-weight: bolder; font-size: larger">{{land.Price}}</div>
                             </div>
                         </div>
