--- a/Developer/Views/Home/_ContactForm.cshtml
+++ b/Developer/Views/Home/_ContactForm.cshtml
@@ -63,11 +63,11 @@
             <input type="hidden" name="OfferLink" value="@Request.RawUrl"/>
         </div>
         <div class="row">
-            <div class="col-md-8 pull-right" style="color:red">
-                <small>Pola oznaczone gwiazdką są wymagane!</small>
-            </div>
             <div class="col-md-8 pull-right" style="text-align: center">
                 <button type="submit" class="btn btn-sm btn-primary" style="width: 100%">Wyślij</button>
+            </div>
+            <div class="col-md-8" style="color:red">
+                <small>Pola oznaczone gwiazdką są wymagane!</small>
             </div>
         </div>
     </div>
