--- a/Developer/Content/Site.css
+++ b/Developer/Content/Site.css
@@ -196,12 +196,56 @@ textarea {
     text-decoradion: none;
 }
 
+/* SHOW */
 
+.custom-advert-type {
+    font-size: large;
+    background-color: black;
+    color: white;
+    margin-left: 5px !important;
+    margin-right: 5px !important;
+    margin-bottom: 3px !important;
+}
 
+.custom-advert-property {
+    background-color: #8b0808;
+    color: white;
+    margin-bottom: 3px;
+    font-size: smaller;
+    margin-left: 5px !important;
+    margin-right: 5px !important;
+    margin-bottom: 3px !important;
+}
+
+.custom-advert-price {
+    background-color: white;
+    border: 2px solid #8b0808;
+    color: black;
+    margin-left: 5px !important;
+    margin-right: 5px !important;
+    margin-bottom: 3px !important;
+    font-size: large;
+}
+
+.custom-advert-panel-title {
+    background-color: #8b0808;
+    color: white;
+    padding-left: 15px;
+}
+
+.custom-advert-panel-body {
+    background-color: white;
+    color: #8b0808;
+    border: 2px solid #8b0808;
+    padding: 10px;
+    font-size: small;
+    text-align: justify;
+    margin-bottom: 10px;
+}
 
 .custom-head-photo {
     width: 100%;
-    border: 2px solid #f39c12;
+    border: 2px solid #8b0808;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgb(157, 157, 157);
 }
