views, css, where we are?

--- a/Developer/Views/Admin/Offers.cshtml
+++ b/Developer/Views/Admin/Offers.cshtml
@@ -3,7 +3,7 @@
 @model List<Developer.Models.EntityModels.Offer>
 
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
         <h4>Lista ofert</h4>
         <div class="row">
