--- a/Developer/Views/Admin/AdList.cshtml
+++ b/Developer/Views/Admin/AdList.cshtml
@@ -21,7 +21,7 @@
 
 
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
         @if (HttpContext.Current.Request.Params.Get("changed") == "True")
         {
