--- a/Developer/Views/Admin/AddAdvert.cshtml
+++ b/Developer/Views/Admin/AddAdvert.cshtml
@@ -4,7 +4,7 @@
 <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
         <h4>Dodaj nieruchomość</h4>
         @Html.EnumDropDownListFor(model => model.AdType, new {@class = "form-control", @style = "max-width:none; border:1px solid green", @id = "AdType"})
