--- a/Developer/Views/Admin/EditWorker.cshtml
+++ b/Developer/Views/Admin/EditWorker.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
         <h4>Dodaj pracownika</h4>
         @if (!ViewData.ModelState.IsValid)
