--- a/Developer/Views/Admin/Index.cshtml
+++ b/Developer/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
     </div>
 </div>
