--- a/Developer/Views/Admin/Photos.cshtml
+++ b/Developer/Views/Admin/Photos.cshtml
@@ -2,7 +2,7 @@
 @model List<Developer.Models.EntityModels.Photo>
 
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
         <h4>Lista zdjęć</h4>
         <div class="row">
