--- a/Developer/Views/Admin/Workers.cshtml
+++ b/Developer/Views/Admin/Workers.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Workers";
 }
 <div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
         @if (Model.Response != null && Model.Response.Success)
         {
