--- a/Developer/Views/Admin/Messages.cshtml
+++ b/Developer/Views/Admin/Messages.cshtml
@@ -29,7 +29,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var ad in Model)
+                        @foreach (var ad in Model.OrderByDescending(x => x.CreatedAt))
                         {
 
                             <tr>
