--- a/Developer/Views/Admin/Photos.cshtml
+++ b/Developer/Views/Admin/Photos.cshtml
@@ -38,15 +38,15 @@
                     <td>@photo.Link</td>
                     @if (photo.Flat != null)
                     {
-                        <td><a href="/Home/Show?id=@photo.Flat.Id&adType=Flat">Mieszkanie</a></td>
+                        <td><a href="/Home/Show?key=@String.Format("{0}{1}",photo.Flat.Id*9999,12)">Mieszkanie</a></td>
                     }
                     else if (photo.House != null)
                     {
-                        <td><a href="/Home/Show?id=@photo.House.Id&adType=House">Dom</a></td>
+                        <td><a href="/Home/Show?key=@String.Format("{0}{1}",photo.House.Id*9999,14)">Dom</a></td>
                     }
                     else if (photo.Land != null)
                     {
-                        <td><a href="/Home/Show?id=@photo.Land.Id&adType=Land">Działka</a></td>
+                        <td><a href="/Home/Show?key=@String.Format("{0}{1}",photo.Land.Id*9999,18)">Działka</a></td>
                     }
                     else
                     {
